Added UI for menu screen and added the colour scheme

--- a/ChoreManager/app/src/main/res/values/strings.xml
+++ b/ChoreManager/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="menuTitle">Name</string>
+    <string name="MenuText">TextView</string>
+    <string name="menu">Menu</string>
 </resources>
