--- a/ChoreManager/app/src/main/res/values/strings.xml
+++ b/ChoreManager/app/src/main/res/values/strings.xml
@@ -92,17 +92,12 @@
     <string name="desc_hint">Please Enter A Description of The Task</string>
     <string name="note_hint">Please Enter A Note</string>
     <string name="repeatable_text">Repeatable</string>
+    <string name="numberOfTimes_String">Number of Times</string>
 
     <string-array name="themeSpinner_Options">
         <item name="defaultTheme">Default Theme</item>
         <item name="notDefaultTheme">Not Default Theme</item>
         <item name="notNotDefaultTheme">Not Not Default Theme</item>
-    </string-array>
-
-    <string-array name="choreTypeSpinner_Options">
-        <item name="miscOption">Misc</item>
-        <item name="cleaningOption">Cleaning</item>
-        <item name="cookingOption">Cooking</item>
     </string-array>
 
     <string-array name="userSpinner_Options">
@@ -111,5 +106,20 @@
         <item name="user2">Sam Rennie</item>
         <item name="user3">Bilal Khalid</item>
     </string-array>
+
+    <string-array name="choreTypeSpinner_Options">
+        <item name="miscOption">Misc</item>
+        <item name="cleaningOption">Cleaning</item>
+        <item name="cookingOption">Cooking</item>
+    </string-array>
+
+    <string-array name="repeatableSpinner_Options">
+        <item name="no">None</item>
+        <item name="daily">Daily</item>
+        <item name="weekly">Weekly</item>
+        <item name="monthly">Monthly</item>
+        <item name="yearly">Yearly</item>
+    </string-array>
+
 
 </resources>
