--- a/ChoreManager/app/src/main/res/values/strings.xml
+++ b/ChoreManager/app/src/main/res/values/strings.xml
@@ -95,6 +95,8 @@
     <string name="numberOfTimes_String">Number of Times</string>
     <string name="string_pick_deadline">Pick Deadline</string>
     <string name="string_total_points">Total Points:</string>
+    <string name="string_points">X Points</string>
+    <string name="materials">Required Materials:</string>
 
     <string-array name="themeSpinner_Options">
         <item name="defaultTheme">Default Theme</item>
