--- a/ChoreManager/app/src/main/res/values/strings.xml
+++ b/ChoreManager/app/src/main/res/values/strings.xml
@@ -107,6 +107,7 @@
     <string name="string_please_select_a_category">Please Select A Category</string>
     <string name="string_placeholder_chore_name">Chore Name Here</string>
     <string name="string_placeholder_status">Status: Pending</string>
+    <string name="string_delete_item_warning">Are you sure you want to delete the selected items? This cannot be undone.</string>
 
     <string-array name="themeSpinner_Options">
         <item name="defaultTheme">Default Theme</item>
