--- a/ChoreManager/app/src/main/res/values/strings.xml
+++ b/ChoreManager/app/src/main/res/values/strings.xml
@@ -1,18 +1,5 @@
 <resources>
     <string name="app_name">ChoreManager</string>
-
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
     <string name="menuTitle">Name</string>
     <string name="menuText">TextView</string>
     <string name="menu">Menu</string>
@@ -118,6 +105,8 @@
     <string name="string_user_menu">User Menu</string>
     <string name="string_assigned_resources">Assigned Resources</string>
     <string name="string_please_assign_user">Please Assign User</string>
+    <string name="string_edit_deadline">Edit Deadline</string>
+    <string name="string_sign_in">Sign In</string>
 
     <string-array name="themeSpinner_Options">
         <item name="defaultTheme">Default Theme</item>
@@ -126,6 +115,7 @@
     </string-array>
 
     <string-array name="userSpinner_Options">
+        <item name="user00">None</item>
         <item name="user0">Peter Lam</item>
         <item name="user1">Alan Tran</item>
         <item name="user2">Sam Rennie</item>
